# MyBot-translation

./: .gitignore  CLAUDE.md  MyBot.spec  PLAN.md  TRANSLATION_ISSUES.md  TRANSLATION_PLAN.md  launcher.py  pyproject.toml
MyBot/: AutoIt Full Compile.bat  MultiBot.au3  MyBot.run.MiniGui.au3  MyBot.run.Wmi.au3  MyBot.run.au3  MyBot.run.version.au3
MyBot/COCBot/: MBR Functions.au3  MBR GUI Action.au3  MBR GUI Control Variables.au3  MBR GUI Control.au3  MBR GUI Design Mini.au3  MBR GUI Design.au3  MBR Global Variables.au3  MBR References.au3
MyBot/Languages/: Arabic.ini  English.ini  Korean.ini  Portuguese.ini  Russian.ini
MyBot/lib/: listSymbols_coc-t-lim.xml
mybot/: __init__.py  __main__.py  app.py  bot.py  constants.py  enums.py  i18n.py  log.py  multi_bot.py  state.py  watchdog.py
mybot/android/: __init__.py  adb.py  app.py  base.py  bluestacks.py  capture.py  health.py  input.py  manager.py  memu.py  nox.py  zoom.py
mybot/api/: __init__.py  client.py  server.py
mybot/army/: __init__.py  army_overview.py  check_camp.py  check_full.py  double_train.py  quick_train.py  read_cc.py  read_heroes.py  read_siege.py  read_spells.py  read_troops.py  smart_wait.py  train.py  train_click.py  train_it.py  train_siege.py
mybot/attack/: __init__.py  attack_bar.py  cycle.py  deploy.py  (+11 more)
tests/: conftest.py  test_adb.py  test_app.py  test_capture.py  test_config.py  test_emulator.py  test_enums.py  test_formatting.py  test_health.py  test_i18n.py  test_input.py  test_paths.py  test_phase4.py  test_phase5.py  test_phase6.py  test_sleep.py  test_state.py  test_vision.py
(+290 files in other folders)
