[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mybot"
version = "8.2.0"
description = "Clash of Clans automation bot - Python translation of MyBot.run"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "Pillow>=10.0",
    "PyQt6>=6.6",
    "pure-python-adb>=0.3.0.dev0",
    "requests>=2.31",
    "psutil>=5.9",
    "pywin32>=306",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
mybot = "mybot.__main__:main"

[tool.setuptools.packages.find]
include = ["mybot*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
